# muman

./: .gitignore  Cargo.toml  flake.nix  songs
src/: album.rs  artist.rs  cli.rs  dedup.rs  fs.rs  lib.rs  libman.rs  library.rs  lives.rs  main.rs  metadata.rs  playlists.rs  playlistsss.rs  track.rs  utils.rs
