[package]
name = "muman"
version = "0.1.0"
edition = "2024"
authors = ["k4yn5"]
description = "A [Mu]sic [Man]ager cli tool, with several features to manage your local music collection."
license = "gpl-3.0"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
lofty = "0.22.4"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ureq = "3.1.4"
urlencoding = "2.1.3"
